# Pak-Welfare-Project

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  alembic.ini  docker-compose.yml  entrypoint.sh  pyproject.toml  requirements.txt
app/: __main__.py  main.py
app/admin/auth/: router.py
app/alembic/: env.py
app/alembic/versions/: 0033fcacf690_fix_type_enum_to_uppercase.py  131178432795_add_admin_table.py  20bfc76ecc60_add_guest_table.py  27a218d47ff6_add_user_table.py  2a2a3e28fd24_add_servicetype_table.py  2c1faae326e9_add_documents_table_and_nationality.py  319fba43d83c_add_guest_table.py  366583986193_add_admin_table.py  54004ee35a0e_add_guest_table.py  5a91ae2e157a_make_changes_in_the_document_table.py  8884ff7d049d_fix_1_1_relationship_between_guest_and_.py  8a120171ea24_editing_the_document_enum.py  947917ac78ef_make_tracking_number_nullable_in_guest.py  953f2a822bde_adding_relationshipsss.py  9898ef83dc18_add_servicetype_table.py  9e29655509e1_removing_slug_column_and_changing_.py  a0eca40d4281_making_changes_in_relationships.py  a8d2ddad3578_adding_relationships.py  (+3 more)
app/commands/: create_admin.py
app/models/: __init__.py  admin.py  base.py  document.py  guest.py  noc_application.py  service_type.py  tracking_application.py  user.py
app/schema/: pagination.py
app/services/: pagination.py
app/utils/: api.py  config.py  credits.py  database.py  dependencies.py  exception_handler.py  helpers.py  logging.py  minio_config.py  pagination.py  security.py
frontend/: index.html
misc/: init.sql
(+54 files in other folders)
